--- a/docker-compose.traefik.yaml
+++ b/docker-compose.traefik.yaml
@@ -1,63 +1,61 @@
 version: '3.7'
 
 services:
-  backend:
-    image: devsuporte/whaticket-backend:latest
-    restart: always
-    environment:
-      - DB_HOST=mysql
-      - DB_USER=root
-      - DB_PASS=strongpassword
-      - DB_NAME=whaticket
-      - JWT_SECRET=superjwtsecret
-      - JWT_REFRESH_SECRET=superjwtrefresh
-      - BACKEND_URL=https://api.ceq.bizzudigital.com.br
-      - FRONTEND_URL=https://ceq.bizzudigital.com.br
-      - PROXY_PORT=8080
-      - CHROME_ARGS=--no-sandbox --disable-setuid-sandbox
-    volumes:
-      - ./backend/public:/usr/src/app/public/
-      - ./backend/.wwebjs_auth:/usr/src/app/.wwebjs_auth/
-    networks:
-      - web
-      - whaticket
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`api.ceq.bizzudigital.com.br`)"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.routers.api.tls.certresolver=letsencrypt"
-      - "traefik.http.services.api.loadbalancer.server.port=3000"
-
   frontend:
-    image: devsuporte/whaticket-frontend:latest
+    build: ./frontend
     restart: always
-    environment:
-      - URL_BACKEND=backend:3000
-      - REACT_APP_BACKEND_URL=https://api.ceq.bizzudigital.com.br
-    networks:
-      - web
-      - whaticket
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.frontend.rule=Host(`ceq.bizzudigital.com.br`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
-      - "traefik.http.services.frontend.loadbalancer.server.port=80"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+    depends_on:
+      - backend
+    networks:
+      - web
+      - whaticket
+
+  backend:
+    build: ./backend
+    restart: always
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=Host(`api.ceq.bizzudigital.com.br`)"
+      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.tls.certresolver=letsencrypt"
+      - "traefik.http.services.backend.loadbalancer.server.port=5000"
+    environment:
+      - DB_HOST=mysql
+      - DB_USER=whaticket
+      - DB_PASS=whaticketpass
+      - DB_NAME=whaticket
+      - JWT_SECRET=supertokensecreto
+      - CHROMELESS=true
+    depends_on:
+      - mysql
+    networks:
+      - web
+      - whaticket
 
   mysql:
-    image: mariadb:10.6
+    image: mysql:5.7
     restart: always
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_bin
-    volumes:
-      - ./.docker/data:/var/lib/mysql
     environment:
+      - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=whaticket
-      - MYSQL_ROOT_PASSWORD=strongpassword
-      - TZ=America/Fortaleza
+      - MYSQL_USER=whaticket
+      - MYSQL_PASSWORD=whaticketpass
+    volumes:
+      - mysql_data:/var/lib/mysql
     networks:
       - whaticket
 
+volumes:
+  mysql_data:
+
 networks:
-  whaticket:
   web:
     external: true
+  whaticket:
+    driver: bridge
